--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
         </div>
 
         <div class="buttons">
-            <div id="clear" class="button"><h1>Clear</h1></div>
-            <div id="del" class="button"><h1>Del</h1></div>
-            <div id="one" class="button"><h1>1</h1></div>
-            <div id="two" class="button"><h1>2</h1></div>
-            <div id="three" class="button"><h1>3</h1></div>
-            <div id="plus" class="button"><h1>+</h1></div>
-            <div id="four" class="button"><h1>4</h1></div>
-            <div id="five" class="button"><h1>5</h1></div>
-            <div id="six" class="button"><h1>6</h1></div>
-            <div id="minus" class="button"><h1>-</h1></div>
-            <div id="seven" class="button"><h1>7</h1></div>
-            <div id="eight" class="button"><h1>8</h1></div>
-            <div id="nine" class="button"><h1>9</h1></div>
-            <div id="times" class="button"><h1>*</h1></div>
-            <div id="equals" class="button"><h1>=</h1></div>
-            <div id="zero" class="button"><h1>0</h1></div>
-            <div id="dot" class="button"><h1>.</h1></div>
-            <div id="division" class="button"><h1>/</h1></div>
+            <div id="clear" class="button greybuttons"><h1>Clear</h1></div>
+            <div id="del" class="button greybuttons"><h1>Del</h1></div>
+            <div id="one" class="button bluebuttons"><h1>1</h1></div>
+            <div id="two" class="button bluebuttons"><h1>2</h1></div>
+            <div id="three" class="button bluebuttons"><h1>3</h1></div>
+            <div id="plus" class="button orangebuttons"><h1>+</h1></div>
+            <div id="four" class="button bluebuttons"><h1>4</h1></div>
+            <div id="five" class="button bluebuttons"><h1>5</h1></div>
+            <div id="six" class="button bluebuttons"><h1>6</h1></div>
+            <div id="minus" class="button orangebuttons"><h1>-</h1></div>
+            <div id="seven" class="button bluebuttons"><h1>7</h1></div>
+            <div id="eight" class="button bluebuttons"><h1>8</h1></div>
+            <div id="nine" class="button bluebuttons"><h1>9</h1></div>
+            <div id="times" class="button orangebuttons"><h1>*</h1></div>
+            <div id="equals" class="button orangebuttons"><h1>=</h1></div>
+            <div id="zero" class="button bluebuttons"><h1>0</h1></div>
+            <div id="dot" class="button orangebuttons"><h1>.</h1></div>
+            <div id="division" class="button orangebuttons"><h1>/</h1></div>
         </div>
     </div>
 
